--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -14,7 +14,9 @@
 <div class="row">
     <div class="container">
     <a class="btn btn-primary" data-toggle="modal" href="#modalid">Add Contact</a>
-    <!--<button class="btn btn-primary" id="btnrefresh">Refresh</button>-->
+    <a class="btn btn-primary"  href="{% url 'contacts:exportcsv' %}">Export to csv</a>
+    <a class="btn btn-primary"  href="{% url 'contacts:exportvero' %}">Export to Getvero</a>
+    
    
     <div class="modal fade" id="modalid" role="dialog">
       <div class="modal-dialog">
