--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -1,121 +1,123 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
-
-{% block style %}
-  <link href="{% static 'dataTable/datatables.min.css' %}" rel="stylesheet">
-{% endblock %}
-
-{% block content %}
+{% extends 'base.html' %} {% load staticfiles %} {% block style %}
+<link href="{% static 'dataTable/datatables.min.css' %}" rel="stylesheet"> {% endblock %} {% block content %}
 <div class="row">
   <div class="container">
     <h1 class="text-center">Contacts Page</h1>
   </div>
+  {% if messages %}
+  <div class="container">
+    <div class="alert alert-success">
+      <strong>Success!</strong>
+      {% for message in messages %}
+      <p>{{ message }}</p>
+      {% endfor %}
+    </div>
+    {% endif %}
+  </div>
 </div>
 <div class="row">
-    <div class="container">
+  <div class="container">
     <a class="btn btn-primary" data-toggle="modal" href="#modalid">Add Contact</a>
-    <a class="btn btn-primary"  href="{% url 'contacts:exportcsv' %}">Export to csv</a>
-    <a class="btn btn-primary"  href="{% url 'contacts:exportvero' %}">Export to Getvero</a>
-    
-   
+    <a class="btn btn-primary" href="{% url 'contacts:exportcsv' %}">Export to csv</a>
+    <a class="btn btn-primary" href="{% url 'contacts:exportvero' %}">Export to Getvero</a>
+
+
     <div class="modal fade" id="modalid" role="dialog">
       <div class="modal-dialog">
-        <form method="post"  id="form-modal" action="{% url 'contacts:addcontact' %}">
+        <form method="post" id="form-modal" action="{% url 'contacts:addcontact' %}">
           {% csrf_token %}
           <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Add Contact</h4>             
-              
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title">Add Contact</h4>
+
             </div>
             <div class="modal-body">
               <div class="form-group">
-                <label for="id_first_name">First Name</label> 
-                <input type="text" class="form-control" name="first_name"  maxlength="45" required  id="id_first_name" /> 
+                <label for="id_first_name">First Name</label>
+                <input type="text" class="form-control" name="first_name" maxlength="45" required id="id_first_name" />
               </div>
               <div class="form-group">
-                <label for="id_second_name">Second Name</label> 
-                <input type="text" class="form-control" name="second_name"  maxlength="45" required  id="id_second_name" /> 
+                <label for="id_second_name">Second Name</label>
+                <input type="text" class="form-control" name="second_name" maxlength="45" required id="id_second_name" />
               </div>
               <div class="form-group">
-                <label for="id_town">Town</label> 
-                <input type="text" class="form-control" name="town"  maxlength="45" id="id_town" /> 
+                <label for="id_town">Town</label>
+                <input type="text" class="form-control" name="town" maxlength="45" id="id_town" />
               </div>
               <div class="form-group">
-                <label for="id_country">Country</label> 
-                <input type="text" class="form-control" name="country"  maxlength="45" id="id_country" /> 
+                <label for="id_country">Country</label>
+                <input type="text" class="form-control" name="country" maxlength="45" id="id_country" />
               </div>
               <div class="form-group">
-                <label for="id_telephone">Telephone</label> 
-                <input type="text" class="form-control" name="telephone"  maxlength="20" required id="id_telephone" /> 
+                <label for="id_telephone">Telephone</label>
+                <input type="text" class="form-control" name="telephone" maxlength="20" required id="id_telephone" />
               </div>
               <div class="form-group">
-                <label for="id_email">Email</label> 
-                <input type="text" class="form-control" name="email"  maxlength="45" required id="id_email" /> 
+                <label for="id_email">Email</label>
+                <input type="text" class="form-control" name="email" maxlength="45" required id="id_email" />
               </div>
               <div class="form-group">
-                <label for="id_date_of_birth">First Name</label> 
-                <input type="date" class="form-control" name="date_of_birth" id="id_date_of_birth" /> 
+                <label for="id_date_of_birth">First Name</label>
+                <input type="date" class="form-control" name="date_of_birth" id="id_date_of_birth" />
               </div>
-                
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal" id="bntclose">Close</button>
-              <button type="submit" class="btn btn-primary" id=btnSave >Save contact</button>
+              <button type="submit" class="btn btn-primary" id=btnSave>Save contact</button>
             </div>
-          </div>	
-        </form>	
+          </div>
+        </form>
       </div>
-    </div>		
-	</div>
+    </div>
+  </div>
 </div>
 <hr>
 <div class="row">
-	<div class="container">
-			<table class="table  table-bordered table-condensed" id="infTable">
-          {% csrf_token %}
-				<thead>
-          <tr>							  
-            <th class="text-center">№</th>	
-            <th class="text-center">first_name</th>
-            <th class="text-center">second_name</th>
-            <th class="text-center">town</th>  
-            <th class="text-center">country</th>
-            <th class="text-center">telephone</th>					                             
-            <th class="text-center">email</th>   
-            <th class="text-center">date_of_birth</th>
-            <th class="text-center">created_at</th>							
-            <th class="text-center">Action</th>
-                           
-          </tr>
-        </thead>
-        <tbody></tbody>
-        <tfoot>
-          <tr>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th>town</th>
-              <th>country</th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-          </tr>
+  <div class="container">
+    <table class="table  table-bordered table-condensed" id="infTable">
+      {% csrf_token %}
+      <thead>
+        <tr>
+          <th class="text-center">№</th>
+          <th class="text-center">first_name</th>
+          <th class="text-center">second_name</th>
+          <th class="text-center">town</th>
+          <th class="text-center">country</th>
+          <th class="text-center">telephone</th>
+          <th class="text-center">email</th>
+          <th class="text-center">date_of_birth</th>
+          <th class="text-center">created_at</th>
+          <th class="text-center">Action</th>
+
+        </tr>
+      </thead>
+      <tbody></tbody>
+      <tfoot>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th>town</th>
+          <th>country</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
       </tfoot>
-					
-			</table>
-	
-	</div>
-</div>	
-    
 
-    
+    </table>
 
-{% endblock %}
+  </div>
+</div>
 
-{% block javascript %}
-  <script src="{% static 'dataTable/datatables.min.js' %}"></script>
-  <script src="{% static 'js/contacts.js' %}"></script>
+
+
+
+{% endblock %} {% block javascript %}
+<script src="{% static 'dataTable/datatables.min.js' %}"></script>
+<script src="{% static 'js/contacts.js' %}"></script>
 {% endblock %}
