--- a/templates/contacts/mysettings.html
+++ b/templates/contacts/mysettings.html
@@ -104,11 +104,11 @@
 
                 <tbody>
                     <tr>
-                        <td class="text-center">{{ data.getvero_username }}</td>
-                        <td class="text-center">{{ data.getvero_key }}</td>
+                        <td class="text-center tuser">{{ data.getvero_username }}</td>
+                        <td class="text-center tkey">{{ data.getvero_key }}</td>
                         <td class="text-center">
-                            <a href="#vero-id" data-toggle="modal" class="btn btn-sm btn-info">Edit</a>
-                            <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                            <a href="#vero-id" data-toggle="modal" class="btn btn-sm btn-info">Add/Edit</a>
+                            <a href="{% url 'contacts:del_user_account' %}" class="btn btn-sm btn-danger del">Delete Account</a>
                         </td>
                     </tr>
                 </tbody>
