--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -18,6 +18,7 @@
 <div class="row">
   <div class="container">
     <a class="btn btn-primary" data-toggle="modal" href="#modalid">Add Contact</a>
+    <a class="btn btn-primary" data-toggle="modal" href="#modalimportcsvid">Import from csv</a>
     <a class="btn btn-primary" href="{% url 'contacts:exportcsv' %}">Export to csv</a>
     <a class="btn btn-primary" href="{% url 'contacts:exportvero' %}">Export to Getvero</a>
 
@@ -73,6 +74,42 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="modalimportcsvid" role="dialog">
+  <div class="modal-dialog">
+    <form method="post" id="form-import-csv" action="{% url 'contacts:importcsv' %}">
+      {% csrf_token %}
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Add Contacts</h4>
+        </div>
+        <div class="form-group panel-info">
+            <div class="panel-heading">
+              <label for="id_example">Example csv file</label>
+            </div>
+          <div class="panel-body">
+            <p>first_name,second_name,town,country,telephone,email,date_of_birth</p>
+            <p>Jon,Ivanov,Kiev,USA,123412341234,jon@gmail.com,1987-09-21</p>
+          </div>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="id_adres_file">Select File</label>
+            <input type="file" class="form-control-file form-control" name="mycsvfile">
+          </div>          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal" id="bntcloseimportcsv">Close</button>
+          <button type="submit" class="btn btn-primary" id=btnImportCSV>Import</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+</div>
+</div>
+
 <hr>
 <div class="row">
   <div class="container">
