--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
-    <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
     {% block javascript %}{% endblock %}
 
