--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -185,5 +185,5 @@
 <script src="{% static 'jquery/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
 <script src="{% static 'jquery/jquery-file-upload/jquery.fileupload.js' %}"></script>
 <script src="{% static 'js/contacts.js' %}"></script> 
-<script src="{% static 'js/basic-upload.js' %}"></script>
+<script src="{% static 'js/upload.js' %}"></script>
 {% endblock %}
